[gd_scene load_steps=14 format=3 uid="uid://cvddqevhqmvkm"]

[ext_resource type="Script" path="res://nodes/objectview/objectview.gd" id="1_5hgt4"]
[ext_resource type="Texture2D" uid="uid://bl286ecmtxr10" path="res://icons/return.svg" id="2_aowjx"]
[ext_resource type="FontFile" uid="uid://blcoohqpfdsmy" path="res://fonts/CPCompanyTTBold.ttf" id="3_6v6xa"]
[ext_resource type="FontFile" uid="uid://co5ck2534000h" path="res://fonts/CPCompanyTTRegular.ttf" id="4_5rnl0"]
[ext_resource type="Texture2D" uid="uid://cbyjuhneg8h5" path="res://icons/play.svg" id="6_cej6e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4x2d"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.0117647, 0.254902, 0.541176, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_li2mm"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.00392157, 0.164706, 0.364706, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iob07"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.0117647, 0.254902, 0.541176, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.498039)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nf7pj"]
bg_color = Color(0.839216, 0.933333, 0.972549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76ynd"]
bg_color = Color(0.00392157, 0.164706, 0.364706, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.00392157, 0.164706, 0.364706, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_wpcdp"]
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_nf7pj")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_76ynd")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2soop"]
content_margin_left = 32.0
content_margin_top = 32.0
content_margin_right = 32.0
content_margin_bottom = 32.0
bg_color = Color(0, 0, 0, 0.776471)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_03qeo"]
bg_color = Color(0, 0, 0, 0.686275)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ObjectView" type="Node2D"]
visible = false
script = ExtResource("1_5hgt4")

[node name="Margin" type="MarginContainer" parent="."]
offset_right = 600.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 32

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="HSplit" type="HSplitContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 56
dragger_visibility = 1

[node name="Button" type="Button" parent="Margin/VBox/HSplit"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_c4x2d")
theme_override_styles/hover = SubResource("StyleBoxFlat_li2mm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_li2mm")
theme_override_styles/focus = SubResource("StyleBoxFlat_iob07")
icon = ExtResource("2_aowjx")
icon_alignment = 1

[node name="Name" type="RichTextLabel" parent="Margin/VBox/HSplit"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
theme_override_colors/default_color = Color(0.839216, 0.933333, 0.972549, 1)
theme_override_colors/font_outline_color = Color(0.0117647, 0.254902, 0.541176, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("4_5rnl0")
theme_override_fonts/bold_font = ExtResource("3_6v6xa")
theme_override_font_sizes/normal_font_size = 55
bbcode_enabled = true
text = "Mercurius"
fit_content = true

[node name="TextPanel" type="ScrollContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_wpcdp")
theme_override_styles/panel = SubResource("StyleBoxFlat_2soop")

[node name="Description" type="RichTextLabel" parent="Margin/VBox/TextPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_colors/default_color = Color(0.839216, 0.933333, 0.972549, 1)
theme_override_fonts/normal_font = ExtResource("4_5rnl0")
theme_override_fonts/bold_font = ExtResource("3_6v6xa")
theme_override_font_sizes/normal_font_size = 35
text = "Informatie over de planeet komt in dit vakje te staan heel nice jippieee
Nog een zin hier om te kijken hoe het eruit ziet.
Ja ziet er prima uit"

[node name="VideoPanel" type="PanelContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_03qeo")

[node name="Ratio" type="AspectRatioContainer" parent="Margin/VBox/VideoPanel"]
clip_contents = true
layout_mode = 2
ratio = 1.7778
stretch_mode = 0

[node name="Video" type="VideoStreamPlayer" parent="Margin/VBox/VideoPanel/Ratio"]
layout_mode = 2
expand = true

[node name="Play" type="Button" parent="Margin/VBox/VideoPanel/Ratio"]
visible = false
layout_mode = 2
toggle_mode = true
text = "
"
icon = ExtResource("6_cej6e")
icon_alignment = 1

[connection signal="pressed" from="Margin/VBox/HSplit/Button" to="." method="_on_button_pressed"]
[connection signal="finished" from="Margin/VBox/VideoPanel/Ratio/Video" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="Margin/VBox/VideoPanel/Ratio/Play" to="." method="_on_play_pressed"]
